Style: fix create test button background color
fix create test button background color. So that won't overlay if test list too long.

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,7 @@ a {
   border-top: 1px solid #D6D6D5;
   position: sticky;
   bottom: 0;
+  background-color: #f9f9f9;
 }
 
 .testname {
@@ -192,7 +193,6 @@ a {
 .testcreatebutton{
   cursor: pointer;
   color: #822cb1;
-  text-align: left;
   margin-top: 8px;
 }
 
